# TikTokAutoUploader

./: .gitignore  Documentation.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
TelegramAutomation/: README.md
tiktokautouploader/: __init__.py  function.py
tiktokautouploader/Js_assets/: login.js  package.json
